@@ -1,6 +1,8 @@
 ﻿- Add support for intercity trains
 - Add support for cable cars
 - Add support for bus-intercity bus hub
+- Add support for vanilla airport and Industries DLC cargo airport
+
 
 Version 1.1 -
 
